package.json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "lab03",
+    "name": "hands-on",
     "version": "1.0.0",
     "description": "This is lab03 of the Pet Theory labs",
     "main": "index.js",
